--- a/css/partners.css
+++ b/css/partners.css
@@ -43,12 +43,11 @@
   height: 440px;
 }
 h3 {
-  background-color: #000000;
-  color: #ffffff;
+  background: #fff;
+  box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
+  color: #000;
   font-weight: normal;
-  font-family: helvetica;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 10px 0;
   text-align: center;
   font-size: 0.5em;
 }
