--- a/css/orators.css
+++ b/css/orators.css
@@ -59,12 +59,13 @@
   box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
 }
 
-.orator p {
+.orator-icon p{
   background-color: #E62B1E;
   padding: 2%;
   position: absolute;
   top: 86%;
   left: 50%;
+  border-radius: 5px;
   transform: translate(-50%, -50%);
   color: #fff;
 }
@@ -80,4 +81,27 @@
 
 .orator img:hover ~ .orName, .orator p:hover {
   display: block;
+}
+.orator-info{
+  display: none;
+}
+.info-bckg {
+  background: #000;
+  position: absolute;
+  width: 100vw;
+  height: 255vh;
+  margin-top: -80vh;
+  z-index: 2;
+  opacity: 0.7;
+}
+
+.info-container {
+  background: #fff;
+  position: fixed;
+  width: 60vw;
+  height: 70vh;
+  margin-left: 20vw;
+  margin-top: -50vh;
+  z-index: 3;
+  border-radius: 5px;
 }
