--- a/css/orators.css
+++ b/css/orators.css
@@ -51,7 +51,6 @@
   position: relative;
   text-align: center;
 }
-
 .orator img {
   width: 55%;
   transition: 0.3s ease;
@@ -63,14 +62,12 @@
   background-color: #E62B1E;
   padding: 2%;
   position: absolute;
-  top: 86%;
+  top: 95%;
   left: 50%;
+  font-weight: bold;
   border-radius: 5px;
   transform: translate(-50%, -50%);
   color: #fff;
-}
-.orName{
-  display: none;
 }
 
 .orator img:hover {
@@ -80,7 +77,7 @@
 }
 
 .orator img:hover ~ .orName, .orator p:hover {
-  display: block;
+  display: none;
 }
 .orator-info{
   display: none;
