--- a/css/team.css
+++ b/css/team.css
@@ -6,12 +6,16 @@
 }
 /*-----------------------HOME------------------------*/
 #team_home {
-  height: 300px;
-  background-color: #000000;
-  /*background-image: url('../img/background.jpg');
+  height: 400px;
+  background:
+  linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+        ), url('../img/team/back.jpg');
   background-position: center;
-  background-size: cover;*/
+  background-size: cover;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -39,11 +43,11 @@
 
 /*-----------------------INFO------------------------*/
 #info {
-  height: 300px;
+  height: auto;
   background: #ffffff;
 }
 .info {
-  padding: 80px 60px 60px 60px;
+  padding: 8% 8%;
 }
 #info p {
   color: #000000;
@@ -75,168 +79,49 @@
 /*-----------------------MEMBROS------------------------*/
 
 #members {
-  height: 1700px;
-  background-color:#E62B1E;
+  height: auto;
+  padding-bottom: 10%;
 }
-#members h1 {
+#members h1{
+  margin-top: 8vh;
   text-align: center;
-  font-size: 2em;
-  padding-top: 60px;
+  font-size: 2.2em;
+  color: #E62B1E;
+  padding-bottom: 2vh;
 }
-#members h2 {
-  font-size:14px;
-  color: #ffffff;
+#members h1:first-child{
+  margin-top: 3vh;
 }
-#members h3 {
-  font-size: 14px;
-  color: #000000;
-}
-.container_members1 {
-  padding-top: 30px;
+.m-container{
   display: flex;
-  text-align: center;
   justify-content: center;
-}
-.member {
-  margin-left: 3em;
-  margin-right: 3em;
-}
-.container_members2 {
-  padding-top: 50px;
-  display: flex;
   text-align: center;
-  justify-content: center;
+  margin-top: 5vh;
 }
-.member2 {
-  margin-left: 2em;
-  margin-right: 2em;
+.m-container h2{
+  font-size: 1em;
 }
-.container_members3{
-  padding-top: 50px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
+.m-container img{
+  margin: 0 2vw;
+  transition: 0.3s ease;
+  border-radius: 5px;
+  box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
 }
-.member3 {
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+.m-container img:hover {
+  transform: scale(1.02, 1.02);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-@media screen and (max-width: 1200px) {
-  #members {
-    height: 7100;
-  }
-  .container_members1 {
-    display: block;
-  }
-  .member {
-    padding-top: 20px;
-  }
-  .container_members2 {
-    display: block;
-  }
-  .member2 {
-    padding-top: 20px;
-  }
-  .container_members3{
-    display: block;
-  }
-  .member3 {
-    padding-top: 20px;
-  }
-  #members h1 {
-    font-size: 1.5em;
-  }
+.m-container p{
+  color: #E62B1E;
 }
-
-
-
-
-
-/*-----------------------FOOTER------------------------*/
-#footer {
-  background-color: #000000;
-  height: 180px;
-  border-top: 6px solid #E62B1E;
+.m-container p:last-child{
+  color: #000;
 }
-.container_contact {
-  display: flex;
-  justify-content: space-between;
-  font-size: 12px;
-  font-weight: lighter;
-  color: #ffffff;
+.m-container .member:first-child{
 }
-.left {
-  padding: 32px 0px 0px 180px;
+.org1 img{
+  width: 14vw;
 }
-.right {
-  padding: 32px 180px 0px 0px;
-}
-.right p {
-  padding-top: 60px;
-}
-.right img{
-  float: right;
-}
-.container_credit {
-  font-size: 10px;
-  font-weight: lighter;
-  color: #ffffff;
-  padding-left: 180px;
-  padding-top: 10px;
-  padding-right: 180px;
-}
-.container_credit p {
-  text-align: right;
-  width: 100%;
-  border-top: 1px solid #FFFFFF;
-  padding-top: 5px;
-}
-.contact_mobile {
-  display: none;
-  justify-content: space-around;
-  padding: 40px 20px 0 20px;
-}
-.contact_mobile p {
-  font-size: 12px;
-  font-weight: lighter;
-  padding: 20px 50px 0 50px;
-  color: #ffffff;
-}
-@media screen and (max-width: 840px) {
-  .left {
-    padding: 30px 0px 0px 30px;
-  }
-  .right {
-    padding: 30px 30px 0px 0px;
-  }
-  .right p{
-    padding-left: 80px;
-  }
-  .container_credit {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
-@media screen and (max-width: 600px) {
-  .contact_mobile {
-    display: flex;
-  }
-  .container_contact {
-    display: none;
-  }
-  .container_credit {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .right img {
-    padding-right: 60px;
-  }
-}
-@media screen and (max-width: 400px) {
-  .rightM {
-    display: none;
-  }
-  .contact_mobile p {
-      padding: 8px 10px 0 50px;
-  }
+.org2 img, .log img, .or img, .img-cm img, .fund img{
+  width: 11vw;
 }
