--- a/css/orators.css
+++ b/css/orators.css
@@ -41,7 +41,6 @@
 
 .orators-container {
   display: flex;
-  justify-content: space-around;
   margin-top: 8%;
 }
 
@@ -51,8 +50,9 @@
   position: relative;
   text-align: center;
 }
+
 .orator img {
-  width: 55%;
+  width: 20vw;
   transition: 0.3s ease;
   border-radius: 5px;
   box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
@@ -62,12 +62,14 @@
   background-color: #E62B1E;
   padding: 2%;
   position: absolute;
-  top: 95%;
+  top: 86%;
   left: 50%;
-  font-weight: bold;
   border-radius: 5px;
   transform: translate(-50%, -50%);
   color: #fff;
+}
+.orName{
+  display: none;
 }
 
 .orator img:hover {
@@ -77,16 +79,18 @@
 }
 
 .orator img:hover ~ .orName, .orator p:hover {
+  display: block;
+}
+
+#orator-info{
   display: none;
 }
-.orator-info{
-  display: none;
-}
+
 .info-bckg {
   background: #000;
   position: absolute;
   width: 100vw;
-  height: 255vh;
+  height: 215vh;
   margin-top: -80vh;
   z-index: 2;
   opacity: 0.7;
@@ -96,9 +100,17 @@
   background: #fff;
   position: fixed;
   width: 60vw;
-  height: 70vh;
+  height: auto;
   margin-left: 20vw;
-  margin-top: -50vh;
+  margin-top: -40vh;
   z-index: 3;
   border-radius: 5px;
+  text-align: center;
+}
+
+.info-container h2 {
+  padding: 5% 5% 0 5%;
+}
+.info-container p {
+  padding: 5% 10%;
 }
