--- a/css/geral.css
+++ b/css/geral.css
@@ -1,37 +1,41 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   font-family: Helvetica;
 }
-
 
 /*----------------------NAVBAR------------------------*/
 nav {
   position: fixed;
-  width:100%;
+  width: 100%;
   height: 65px;
   z-index: 2;
   transition: 0.3s;
 }
+
 .logo img {
   position: fixed;
   padding-top: 12px;
   padding-left: 20px;
 }
+
 nav ul {
   text-align: right;
   list-style: none;
   padding-top: 2px;
   padding-right: 20px;
 }
+
 nav li {
   display: inline-block;
   position: relative;
   padding: 10px;
 }
-nav li:last-child(){
+
+nav li:last-child() {
   padding-right: 0;
 }
+
 nav a {
   color: #ffffff;
   text-decoration: none;
@@ -40,48 +44,43 @@ nav a {
   font-weight: 500;
   font-size: 12px;
 }
+
 nav.black {
   background: rgba(0, 0, 0, 0.8);
   border-bottom: 2px solid #E62B1E;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
-li::before{
-  content:'';
+
+li::before {
+  content: '';
   display: block;
   height: 2px;
   width: 100%;
   background-color: #E62B1E;
-  position:static;
+  position: static;
   width: 0%;
   transition: all ease-in-out 250ms;
   margin-top: 10px;
 }
-li:hover::before{
+
+li:hover::before {
   width: 100%;
 }
-}
+
 nav .line {
   width: 500px;
   height: 4px;
   color: #E62B1E;
   background-color: #E62B1E;
 }
-.nav_2 {
-  color: #E62B1E;
-  text-align: right;
-  height: 70px;
-  line-height: 70px;
-  display: none;
-}
-.nav_2 label:hover {
-  color: #ffffff;
-}
+
 .menu {
   margin: 0 30px 0 0;
+  border-bottom: 2px solid #E62B1E;
 }
+
 .menu a {
-  width: 100%
-  color: #ffffff;
+  width: 100% color: #ffffff;
   text-align: right;
   font-size: 1em;
   padding-bottom: 20px;
@@ -89,50 +88,148 @@ nav .line {
   padding-right: 20px;
   transition: 0.3s;
 }
+
 .menu a:hover {
   color: #E62B1E;
 }
-label {
-  margin: 0 20px 0 0;
-  font-size: 2em;
-  line-height: 70px;
-}
-#toggle {
-  display: none;
 
-}
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 980px) {
   .nav_1 {
     display: none;
   }
+
   .logo img {
     padding-left: 10px;
   }
-  .nav_2 {
-    display: block;
+
+  .menu a {
+    text-align: center;
+    font-size: 1em;
+    padding: 0;
+    transition: 0.3s;
   }
+
+  li:hover::before {
+    width: 0;
+  }
+
   .label {
     display: block;
     cursor: pointer;
   }
+
   .menu {
     text-align: center;
     width: 100%;
     display: none;
-    border-bottom: 6px solid #E62B1E;
   }
+
   .menu a {
     display: block;
     background-color: #000000;
-    border-bottom: 1px solid grey;
-  }
-  #toggle {
-  }
-  #toggle:checked + .menu {
-    display: block;
   }
 }
 
+#hamburguer {
+  display: none;
+}
+
+@media screen and (max-width: 980px) {
+  #hamburguer {
+    display: flex;
+  }
+}
+
+#menu-hamburguer {
+  display: none;
+}
+
+.menu-select {
+  opacity: 0.8;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  z-index: 20;
+  position: fixed;
+  top: 0.6%;
+  right: 10px;
+}
+
+.hamburguer {
+  position: relative;
+  display: block;
+  background: #E62B1E;
+  width: 25px;
+  height: 3px;
+  top: 25px;
+  left: 13px;
+  transition: .5s ease-in-out;
+  border-radius: 10px;
+}
+
+.hamburguer:before,
+.hamburguer:after {
+  background: #E62B1E;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: .5s ease-in-out;
+  border-radius: 10px;
+}
+
+.hamburguer:before {
+  top: -10px;
+}
+
+.hamburguer:after {
+  bottom: -10px;
+}
+
+input:checked~label .hamburguer {
+  transform: rotate(45deg);
+}
+
+input:checked~label .hamburguer:before {
+  transform: rotate(90deg);
+  top: 0;
+}
+
+input:checked~label .hamburguer:after {
+  transform: rotate(90deg);
+  bottom: 0;
+}
+
+.menu {
+  background: #000;
+  z-index: 10;
+  font-weight: bold;
+  font-size: 0.8em;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  position: fixed;
+  text-align: center;
+  font-size: 14px;
+  padding-top: 20px;
+}
+
+.menu li {
+  display: block;
+  margin-top: 8%;
+}
+
+.menu a {
+  margin: 0px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5em;
+}
+
+.menu a:hover {
+  color: #E62B1E;
+}
 
 /*-----------------------FOOTER------------------------*/
 #footer {
@@ -140,6 +237,7 @@ label {
   height: 180px;
   border-top: 2px solid #E62B1E;
 }
+
 .container_contact {
   display: flex;
   justify-content: space-between;
@@ -147,18 +245,23 @@ label {
   font-weight: lighter;
   color: #ffffff;
 }
+
 .left {
   padding: 32px 0px 0px 180px;
 }
+
 .right {
   padding: 32px 180px 0px 0px;
 }
+
 .right p {
   padding-top: 60px;
 }
-.right img{
+
+.right img {
   float: right;
 }
+
 .container_credit {
   font-size: 10px;
   font-weight: lighter;
@@ -167,58 +270,71 @@ label {
   padding-top: 10px;
   padding-right: 180px;
 }
+
 .container_credit p {
   text-align: right;
   width: 100%;
   border-top: 1px solid #FFFFFF;
   padding-top: 5px;
 }
+
 .contact_mobile {
   display: none;
   justify-content: space-around;
   padding: 40px 20px 0 20px;
 }
+
 .contact_mobile p {
   font-size: 12px;
   font-weight: lighter;
   padding: 20px 50px 0 50px;
   color: #ffffff;
 }
+
 @media screen and (max-width: 840px) {
   .left {
     padding: 30px 0px 0px 30px;
   }
+
   .right {
     padding: 30px 30px 0px 0px;
   }
-  .right p{
+
+  .right p {
     padding-left: 80px;
   }
+
   .container_credit {
     padding-left: 30px;
     padding-right: 30px;
   }
 }
+
 @media screen and (max-width: 600px) {
   .contact_mobile {
     display: flex;
   }
+
   .container_contact {
     display: none;
   }
+
   .container_credit {
     padding-left: 20px;
     padding-right: 20px;
   }
+
   .right img {
     padding-right: 60px;
   }
 }
+
 @media screen and (max-width: 400px) {
   .rightM {
     display: none;
   }
+
   .contact_mobile p {
-      padding: 8px 10px 0 50px;
+    padding: 8px 10px 0 50px;
   }
 }
