--- a/css/tedtedx.css
+++ b/css/tedtedx.css
@@ -1,4 +1,3 @@
-
 /*-----------------------HOME------------------------*/
 #tedtedx {
   height: 800px;
@@ -6,12 +5,14 @@
   background-position: center;
   background-size: cover;
 }
+
 .container_video {
   padding-top: 30px;
   text-align: center;
   display: flex;
   justify-content: space-around;
 }
+
 .container_video a {
   color: #E62B1E;
   float: right;
@@ -20,49 +21,57 @@
   text-decoration: none;
   font-size: 2em;
 }
-.video{
- background-color: rgba(0,0,0, 0.6);
- width:100%;
- height: 100%;
- position: fixed;
- top: 0;
- left: 0;
- z-index: 10;
- opacity: 0;
- visibility: hidden;
- transition: all .5s;
+
+.video {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .5s;
 }
+
 .videoG {
   padding-left: 10px;
 }
-.video_content{
- width: 90%;
- height: 560px;
- background-color: #ffffff;
- border-radius: 25px;
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- padding: 2em;
- opacity: 0;
- visibility: hidden;
- transition: all .5s;
+
+.video_content {
+  width: 90%;
+  height: 560px;
+  background-color: #ffffff;
+  border-radius: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .5s;
 }
-#video:target{
- opacity: 1;
- visibility: visible;
+
+#video:target {
+  opacity: 1;
+  visibility: visible;
 }
-#video:target .video_content{
- opacity: 1;
- visibility: visible;
+
+#video:target .video_content {
+  opacity: 1;
+  visibility: visible;
 }
-.video_open{
+
+.video_open {
   padding-top: 10em;
 }
+
 .videoM {
   visibility: hidden;
 }
+
 .videoP {
   visibility: hidden;
 }
@@ -71,45 +80,53 @@
   .videoG {
     display: none;
   }
-  .video_content{
+
+  .video_content {
     height: 300px;
   }
+
   .videoM {
     visibility: inherit;
   }
 }
+
 @media screen and (max-width: 840px) {
   #tedtedx {
     height: 600px;
   }
+
   .videoM {
     display: none;
   }
+
   .videoP {
     margin-left: -5px;
     visibility: inherit;
   }
+
   .video_content {
     height: 140px;
     width: 75%;
   }
-  .video{
+
+  .video {
     height: 540px;
     margin-top: 70px;
     padding-top: 60px;
     border-radius: 2px;
   }
+
   .container_video a {
     font-size: 18px;
   }
 }
 
-
 /*-----------------------COMPARE------------------------*/
 #compare {
   height: 900px;
 }
-.compare-container{
+
+.compare-container {
   width: 80vw;
   height: auto;
   margin: 10vh 10vw;
@@ -118,10 +135,12 @@
   box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
   padding-bottom: 2%;
 }
-.compare-container a{
+
+.compare-container a {
   color: #E62B1E;
   text-decoration: none;
 }
-.compare-container p{
+
+.compare-container p {
   margin: 2%;
 }
