--- a/css/error.css
+++ b/css/error.css
@@ -24,3 +24,8 @@
 .error-info a:hover {
   opacity: 0.8;
 }
+@media screen and (max-width: 600px) {
+  .error-info h1{
+    font-size: 1.5em;
+  }
+}
