--- a/css/tedtedx.css
+++ b/css/tedtedx.css
@@ -15,17 +15,23 @@
 
 .container_video a {
   color: #E62B1E;
-  float: right;
-  margin-top: -30px;
-  margin-right: -15px;
+  position: absolute;
+  top: 0;
+  right: 3%;
+  ;
   text-decoration: none;
   font-size: 2em;
 }
 
+.play img {
+  width: 15%;
+  margin-top: 35vh;
+}
+
 .video {
   background-color: rgba(0, 0, 0, 0.6);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -36,22 +42,55 @@
 }
 
 .videoG {
-  padding-left: 10px;
+  margin-top: 2%;
+  width: 90%;
+  height: 90%;
 }
 
 .video_content {
-  width: 90%;
-  height: 560px;
+  width: 65vw;
+  height: 65vh;
   background-color: #ffffff;
-  border-radius: 25px;
+  border-radius: 15px;
   position: absolute;
-  top: 50%;
+  top: 52%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 2em;
   opacity: 0;
   visibility: hidden;
   transition: all .5s;
+}
+
+@media screen and (max-width: 840px) {
+  #tedtedx {
+    height: 700px;
+  }
+
+  .videoG {
+    margin-top: 2%;
+    width: 90%;
+    height: 90%;
+  }
+
+  .video_content {
+    width: 75vw;
+    height: 35vh;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .videoG {
+    margin-top: 2%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .video_content {
+    width: 75vw;
+    height: 25vh;
+    top: 48%;
+  }
 }
 
 #video:target {
@@ -64,67 +103,11 @@
   visibility: visible;
 }
 
-.video_open {
-  padding-top: 10em;
-}
-
-.videoM {
-  visibility: hidden;
-}
-
-.videoP {
-  visibility: hidden;
-}
-
-@media screen and (max-width: 1150px) {
-  .videoG {
-    display: none;
-  }
-
-  .video_content {
-    height: 300px;
-  }
-
-  .videoM {
-    visibility: inherit;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  #tedtedx {
-    height: 600px;
-  }
-
-  .videoM {
-    display: none;
-  }
-
-  .videoP {
-    margin-left: -5px;
-    visibility: inherit;
-  }
-
-  .video_content {
-    height: 140px;
-    width: 75%;
-  }
-
-  .video {
-    height: 540px;
-    margin-top: 70px;
-    padding-top: 60px;
-    border-radius: 2px;
-  }
-
-  .container_video a {
-    font-size: 18px;
-  }
-}
-
 /*-----------------------COMPARE------------------------*/
 #compare {
   height: auto;
 }
+
 .compare-container {
   width: 80vw;
   height: auto;
@@ -134,6 +117,7 @@
   box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
   padding-bottom: 2%;
 }
+
 .compare-container a {
   color: #E62B1E;
   text-decoration: none;
@@ -142,20 +126,25 @@
 .compare-container p {
   padding: 2%;
 }
-#logo-ted{
+
+#logo-ted {
   width: 20%;
 }
-#logo-tedx{
+
+#logo-tedx {
   width: 40%;
 }
+
 @media screen and (max-width: 800px) {
   .compare-container p {
     font-size: 12px;
   }
-  #logo-ted{
+
+  #logo-ted {
     width: 30%;
   }
-  #logo-tedx{
+
+  #logo-tedx {
     width: 50%;
   }
 }
