--- a/tedx19/css/oradores.css
+++ b/tedx19/css/oradores.css
@@ -857,6 +857,9 @@ a:link,
 a:visited{
  text-decoration: none;
 }
+.perf_container h1{
+  text-shadow: 2px 2px 4px #000000;
+}
 .modal{
  background-color: #000;
  width:100vw;
@@ -891,6 +894,9 @@ a:visited{
 #modal:target .modal__content{
  opacity: 1;
  display: block;
+}
+.modal__content a{
+  color: #E62B1E;
 }
 .modal__close{
  color: #E62B1E;
@@ -936,6 +942,9 @@ a:link,
 a:visited{
  text-decoration: none;
 }
+.perf_container2 h1{
+  text-shadow: 2px 2px 4px #000000;
+}
 .modal2{
   background-color: #000;
   width:100vw;
@@ -947,7 +956,7 @@ a:visited{
   left: 0;
   z-index: 10;
   opacity: 0;
-  visibility: hidden;
+  display: none;
   transition: all .5s;
 }
 .modal2__content{
@@ -960,16 +969,19 @@ a:visited{
  transform: translate(-50%, -50%);
  padding: 2em;
  opacity: 0;
- visibility: hidden;
+ display: none;
  transition: all .5s;
+}
+.modal2__content a{
+  color: #E62B1E;
 }
 #modal2:target{
  opacity: 1;
- visibility: visible;
+ display: block;
 }
 #modal2:target .modal2__content{
  opacity: 1;
- visibility: visible;
+ display: block;
 }
 .modal2__close{
   color: #E62B1E;
