--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,27 @@
   left: 23.5%;
 }
 
+.stream {
+  background: rgba(0,0,0,0.8);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.video iframe{
+  margin-top: 8vh;
+  width: 85vw;
+  height: 80vh;
+  box-shadow: 4px 2px 16px rgba(0, 0, 0, 0.48), -4px -2px 16px #000;
+}
+
 @media screen and (max-width: 600px) {
   #home {
     height: 600px;
@@ -33,6 +54,10 @@
     width: 15%;
     bottom: 27%;
     left: 29.5%;
+  }
+  .video iframe{
+    margin-top: -10vh;
+    height: 55vh;
   }
 }
 
